tests/good/misc/read-char-array-short.pas
program StrLitCopy;

var a: array[0..20] of integer;

begin
    ReadLn(a);
    WriteLn(a[0], ' ', a[1], ' ', a[6], ' ', a[8], ' ', a[13])
end.
